# PartialCsvParser

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  _partial_csv_parser_8hpp.html  _partial_csv_parser_8hpp_source.html  annotated.html  class_p_c_p_1_1_csv_config-members.html  class_p_c_p_1_1_csv_config.html  class_p_c_p_1_1_memory_1_1_csv_config-members.html  class_p_c_p_1_1_memory_1_1_csv_config.html  class_p_c_p_1_1_p_c_p_csv_error-members.html  class_p_c_p_1_1_p_c_p_csv_error.html  class_p_c_p_1_1_p_c_p_error-members.html  class_p_c_p_1_1_p_c_p_error.html  class_p_c_p_1_1_partial_csv_parser-members.html  class_p_c_p_1_1_partial_csv_parser.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  index.html  namespace_p_c_p.html  namespace_p_c_p_1_1_memory.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  struct_p_c_p_1_1partial__csv__t-members.html  struct_p_c_p_1_1partial__csv__t.html
benchmark/: CMakeLists.txt  PartialCsvParserBench.cpp  PartialCsvParser_bench.cpp  README.md  benchmark.hpp  cmdline_options.hpp  csv_parser_cplusplus_bench.cpp
benchmark/csv/: 5000col.csv
example/: 00_parse_with_1parser.cpp  01_parse_with_2parsers_threaded.cpp  02_parse_utf8.cpp  03_parse_tsv_from_memory.cpp  CMakeLists.txt  english.csv  japanese.csv
include/: PartialCsvParser.hpp
script/: generate-benchmark-data.sh  update-doxygen.sh
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_c.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  pages_0.js  search.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
test/: CMakeLists.txt
test/fixture/: Invalid_2col_ContinuousLastEmptyLines.csv  Invalid_ContinuousLastEmptyLines.csv  Invalid_DifferentNumberOfColumns.csv  Realistic_5col_1000row.csv  Valid_Utf8.csv  Valid_WithEmptyColumns.csv  WithHeader_2col_3line_WithoutQuote_WithLastNL.csv  WithHeader_2col_3line_WithoutQuote_WithLastNL.tsv  WithHeader_2col_3line_WithoutQuote_WithoutLastNL.csv  WithoutHeader_2col_3line_WithoutQuote_WithLastNL.csv
test/integrated/: PartialCsvParserEdgeCaseTest.cpp  PartialCsvParserErrorTest.cpp  PartialCsvParserTest.cpp  PartialCsvParserWithOnMemoryCsvTest.cpp
test/unit/: UtilFunctionsTest.cpp
