CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0003 NEW)

PROJECT(partial_csv_parser_benchmarks)

#
# setting variables
SET(PROJ_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)
SET(BENCHMARK_DIR ${CMAKE_CURRENT_SOURCE_DIR})

#
# compile environments
SET(CMAKE_CXX_FLAGS "-O2 -g -Wall ${CMAKE_CXX_FLAGS}")

INCLUDE_DIRECTORIES(
    ${PROJ_ROOT_DIR}/include
)


#
# an executable from a example source file
FILE(GLOB BENCHMARK_SRCS RELATIVE ${BENCHMARK_DIR} *.cpp)
FOREACH(BENCHMARK_SRC ${BENCHMARK_SRCS})
    STRING(REPLACE ".cpp" "" BENCHMARK_EXE ${BENCHMARK_SRC})

    ADD_EXECUTABLE(${BENCHMARK_EXE} ${BENCHMARK_SRC})
    TARGET_LINK_LIBRARIES(${BENCHMARK_EXE} pthread)
ENDFOREACH(BENCHMARK_SRC ${BENCHMARK_SRCS})
