CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
CMAKE_POLICY(SET CMP0003 NEW)

PROJECT(PartialCsvParser_examples)

#
# setting variables
SET(PROJ_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/..)
SET(EXAMPLE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

#
# compile environments
SET(CMAKE_CXX_FLAGS "-O2 -g -Wall ${CMAKE_CXX_FLAGS}")

INCLUDE_DIRECTORIES(
    ${PROJ_ROOT_DIR}/include
)


#
# an executable from a example source file
FILE(GLOB EXAMPLE_SRCS RELATIVE ${EXAMPLE_DIR} *.cpp)
FOREACH(EXAMPLE_SRC ${EXAMPLE_SRCS})
    STRING(REPLACE ".cpp" "" EXAMPLE_EXE ${EXAMPLE_SRC})

    ADD_EXECUTABLE(${EXAMPLE_EXE} ${EXAMPLE_SRC})
    TARGET_LINK_LIBRARIES(${EXAMPLE_EXE} pthread)
ENDFOREACH(EXAMPLE_SRC ${EXAMPLE_SRCS})
